k8s-spring-deployment/kube/deployment-green.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: seid-deployment-green-v2
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: seid-java
      version: v2
  template:
    metadata:
      labels:
        app: seid-java
        version: v2
    spec:
      containers:
        - name: seid-java
          image: seidpeace/seid-java:v2
          ports:
            - containerPort: 8090
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 50
            periodSeconds: 50          
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 50
            periodSeconds: 50
