k8s-spring-deployment/kube/seid-demo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seid-k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seid-java
  template:
    metadata:
      labels:
        app: seid-java
    spec:
      containers:
        - name: seid-java
          image: 'seidpeace/seid-java:first'
          ports:
            - containerPort: 8090
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /id
              port: 8080
            periodSeconds: 1
            initialDelaySeconds: 8
          livenessProbe:
            httpGet:
              path: /id
              port: 8080
            initialDelaySeconds: 8
            periodSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: seid-java
spec:
  selector:
    app: seid-java
  ports:
    - nodePort: 30163
      port: 80
      targetPort: 8090
  type: NodePort
