k8s-spring-deployment/kube/service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: seid-java-blue-v1
spec:
  selector:
    app: seid-java
    version: v1
  ports:
    - port: 80
      targetPort: 8090
      protocol: TCP
  type: LoadBalancer
