k8s-spring-deployment/kube/service-test-green.yml
apiVersion: v1
kind: Service
metadata:
  name: seid-java-test-green-v2
spec:
  selector:
    app: seid-java
    version: v2
  ports:
    - port: 80
      targetPort: 8090
      protocol: TCP
  type: LoadBalancer
