k8s-spring-deployment/kube/Ingress-blue.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seid-ingress-blue
  namespace: default
spec:
  rules:
  - host: seid.abdu.com
    http:
      paths: 
      - path: /home/k8s
        backend:
          service:
            name: seid-java-blue-v1
            port:
              number: 80
        pathType: ImplementationSpecific
