k8s-spring-deployment/kube/Ingress-test-green.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seid-ingress-test
  namespace: default
  annotations:     
   ingress.kubernetes.io/rewrite-target: /home/k8s
spec:
  rules:
  - host: seid.abdu.com
    http:
      paths: 
      - path: /test
        backend:
          service:
            name: seid-java-test-green-v2
            port:
              number: 80
        pathType: Prefix
